Log-service domain' i oluşturuldu. Loglar Mongo DB ye kaydediliyor.Bütün domain lerin servislerine  loglama işlemleri eklendi.(Rabbitmq ile)